Fixed layout issue in certain FF versions.

--- a/WebContent/resources/layout/css/layout.css
+++ b/WebContent/resources/layout/css/layout.css
@@ -27,7 +27,6 @@ body {
 }
 
 #menu {
-	float: left;
 	width: 250px;
 	margin-bottom: 3px;
 }
